add delay after single req

--- a/DataGenerationNewDemoPython/Dockerfile
+++ b/DataGenerationNewDemoPython/Dockerfile
@@ -16,7 +16,8 @@ ENV REVDEBUG_SOLUTION=IndexingMonthlyReports \
  REVDEBUG_HOST=$REVDEBUG_HOST \
  REVDEBUG_APM=1 \
  REVDEBUG_MODE=Crash  \
- REVDEBUG_FORCE_TLS=$REVDEBUG_FORCE_TLS
+ REVDEBUG_FORCE_TLS=$REVDEBUG_FORCE_TLS \
+ SW_AGENT_INSTANCE=eu-central-1e
 
 
 CMD python DataGenerationNewDemoPython/app.py
