--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       context: ./CallApp
     volumes:
       - ./CallApp/:/app
+    networks:
+      - demo_net
   data-generation:
     image: data-generation
     build: 
@@ -20,12 +22,16 @@ services:
         REVDEBUG_FORCE_TLS:  ${REVDEBUG_FORCE_TLS:-true}
     volumes:
       - .:/app
+    networks:
+      - demo_net
   selenium-standalone-chrome:
     image: selenium/standalone-chrome
     ports:
       - 4444:4444
       - 7900:7900
       - 80:80
+    networks:
+      - demo_net
   web:
     build: 
       context: selenium_app/
@@ -33,4 +39,14 @@ services:
     ports: 
       - 8080:8080
     command: uvicorn --host=0.0.0.0 --port=8080 main:app
+    networks:
+      - demo_net
 
+
+networks:
+    demo_net:
+        driver: bridge
+        ipam:
+            driver: default
+            config:   
+                - subnet: 192.168.2.0/24
