--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     ports:
       - 7000:7000
     environment:
-        REVDEBUG_HOST: ${REVDEBUG_HOST:-livedemo.revdebug.com}
+        REVDEBUG_HOST: ${REVDEBUG_HOST:-}
         REVDEBUG_FORCE_TLS:  ${REVDEBUG_FORCE_TLS:-true}
     volumes:
       - .:/app
@@ -29,7 +29,7 @@ services:
     ports:
       - 4444:4444
       - 7900:7900
-      - 80:80
+      - 81:80
     networks:
       - demo_net
   web:
